<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="70sp"
    xmlns:tools="http://schemas.android.com/tools"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:id="@+id/dateChoose"
    android:layout_marginTop="10sp"
    android:orientation="horizontal"
    tools:context=".addItemActivity">

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center_vertical"
        android:text="@string/text_date"
        android:id="@+id/text_date"
        android:textSize="18sp"
        android:layout_marginStart="10sp"
        android:layout_marginEnd="5sp" />

    <TextView
        android:id="@+id/date"
        android:layout_width="150sp"
        android:layout_marginStart="10sp"
        android:layout_marginEnd="5sp"
        android:layout_height="wrap_content"
        android:layout_gravity="center_vertical"
        android:textSize="18sp"
        android:text="@string/hint_date"
        />

    <Button
        android:background="@drawable/button_background"
        app:backgroundTint="@null"
        android:id="@+id/button_dateChoose"
        android:layout_gravity="center_vertical"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_weight="1"
        android:layout_marginStart="20sp"
        android:layout_marginEnd="20sp"
        android:text="@string/btn_choose"
        android:textSize="15sp"
        />


</LinearLayout>