<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/white"
    tools:context=".ui.home.HomeFragment">

    <LinearLayout
        android:id="@+id/total_title"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginEnd="10dp"
        android:layout_marginBottom="10dp"
        android:orientation="vertical"
        android:textAlignment="center"
        app:layout_constraintBottom_toTopOf="@+id/itemTitle"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.06"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.45">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginBottom="5sp"
            android:text="@string/income"
            android:textSize="28sp" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="5sp"
            android:text="@string/expend"
            android:textSize="28sp" />

    </LinearLayout>

    <LinearLayout
        android:id="@+id/total_number"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="5dp"
        android:layout_marginEnd="10dp"
        android:layout_marginBottom="10dp"
        android:orientation="vertical"
        android:textAlignment="center"
        app:layout_constraintBottom_toTopOf="@+id/itemTitle"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintVertical_bias="0.45"
        app:layout_constraintStart_toEndOf="@+id/total_title"
        app:layout_constraintTop_toTopOf="parent">

        <TextView
            android:id="@+id/total_income"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginBottom="6sp"
            android:text="$ 0"
            android:textSize="28sp" />

        <TextView
            android:id="@+id/total_expend"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="6sp"
            android:text="$ 0"
            android:textSize="28sp" />

    </LinearLayout>

    <com.github.mikephil.charting.charts.PieChart
        android:id="@+id/total_pie"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_marginStart="200dp"
        android:layout_marginEnd="10sp"
        android:layout_marginTop="30sp"
        android:layout_marginBottom="600sp"
        app:layout_constraintBottom_toTopOf="@+id/monthChoose"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toEndOf="@+id/total_number"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.50" />

    <LinearLayout
        android:id="@+id/monthChoose"
        android:layout_width="match_parent"
        android:layout_height="70sp"
        android:layout_marginStart="10dp"
        android:layout_marginEnd="10dp"
        android:orientation="horizontal"
        app:layout_constraintBottom_toTopOf="@+id/itemTitle"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent">

        <TextView
            android:id="@+id/text_year"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center_vertical"
            android:layout_marginStart="10sp"
            android:layout_marginEnd="5sp"
            android:layout_weight="1"
            android:text="@string/text_year"
            android:textSize="15sp" />

        <Spinner
            android:id="@+id/input_year"
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:layout_gravity="center_vertical"
            android:layout_marginStart="5sp"
            android:layout_marginTop="10sp"
            android:layout_marginEnd="5sp"
            android:layout_marginBottom="10sp"
            android:layout_weight="1"
            android:spinnerMode="dialog"
            android:textSize="15sp" />

        <TextView
            android:id="@+id/text_month"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center_vertical"
            android:layout_marginStart="5sp"
            android:layout_marginEnd="5sp"
            android:layout_weight="1"
            android:text="@string/text_month"
            android:textSize="15sp" />

        <Spinner
            android:id="@+id/input_month"
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:layout_gravity="center_vertical"
            android:layout_marginStart="5sp"
            android:layout_marginTop="10sp"
            android:layout_marginEnd="10sp"
            android:layout_marginBottom="10sp"
            android:layout_weight="1"
            android:spinnerMode="dropdown"
            android:textSize="15sp">

        </Spinner>

    </LinearLayout>


    <LinearLayout
        android:id="@+id/itemTitle"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginStart="10dp"
        android:layout_marginEnd="10dp"
        android:layout_marginBottom="5sp"
        android:orientation="horizontal"
        android:textAlignment="center"
        app:layout_constraintBottom_toTopOf="@+id/itemList"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="1.0">

        <TextView
            android:id="@+id/title_year"
            android:layout_width="50sp"
            android:layout_height="wrap_content"
            android:layout_marginStart="20dp"
            android:text="@string/text_date"
            android:textAlignment="viewStart"
            android:textColor="#07a"
            android:textSize="18sp" />

        <TextView
            android:id="@+id/title_category"
            android:layout_width="70sp"
            android:layout_height="wrap_content"
            android:layout_marginStart="10dp"
            android:layout_marginEnd="5dp"
            android:text="@string/text_type"
            android:textAlignment="viewStart"
            android:textColor="#07a"
            android:textSize="18sp" />

        <TextView
            android:id="@+id/title_itemName"
            android:layout_width="60sp"
            android:layout_height="wrap_content"
            android:layout_marginStart="5dp"
            android:layout_marginEnd="10dp"
            android:textAlignment="viewStart"
            android:text="@string/text_name"
            android:textColor="#07a"
            android:textSize="18sp" />

        <TextView
            android:id="@+id/title_cash"
            android:layout_width="50sp"
            android:layout_height="wrap_content"
            android:layout_marginStart="5dp"
            android:layout_marginEnd="5dp"
            android:text="@string/text_cash"
            android:textAlignment="center"
            android:textColor="#07a"
            android:textSize="18sp" />

    </LinearLayout>

    <ListView
        android:id="@+id/itemList"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_marginStart="10dp"
        android:layout_marginTop="320dp"
        android:layout_marginEnd="10dp"
        android:layout_marginBottom="10dp"
        android:divider="@null"
        android:dividerHeight="3dp"
        app:layout_constraintBottom_toTopOf="@+id/new_item"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <Button
        android:id="@+id/new_item"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginStart="90dp"
        android:layout_marginTop="80dp"
        android:layout_marginEnd="90dp"
        android:text="@string/new_item"
        android:textAlignment="center"
        android:textSize="20sp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.95" />

</androidx.constraintlayout.widget.ConstraintLayout>