<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/white"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    tools:context=".ui.total.CatTotalFragment">

    <com.github.mikephil.charting.charts.PieChart
        android:id="@+id/cat_Fragment_pie"
        android:layout_width="match_parent"
        android:layout_height="200sp"
        android:layout_marginStart="30dp"
        android:layout_marginEnd="30dp"
        app:layout_constraintBottom_toTopOf="@+id/cat_list"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.45" />

    <Button
        android:id="@+id/in_button"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/income"
        app:layout_constraintBottom_toTopOf="@+id/cat_list"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.25"
        app:layout_constraintVertical_bias="0.18"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/cat_Fragment_pie" />

    <Button
        android:id="@+id/out_button"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/expend"
        app:layout_constraintBottom_toTopOf="@+id/cat_list"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.75"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/cat_Fragment_pie"
        app:layout_constraintVertical_bias="0.18" />

    <LinearLayout
        android:id="@+id/totalDate"
        android:layout_width="match_parent"
        android:layout_height="70sp"
        android:layout_marginStart="20dp"
        android:layout_marginEnd="20dp"
        android:orientation="horizontal"
        app:layout_constraintBottom_toTopOf="@+id/cat_list"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/cat_Fragment_pie"
        app:layout_constraintVertical_bias="0.86">

        <TextView
            android:id="@+id/text_year"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center_vertical"
            android:layout_marginStart="10sp"
            android:layout_marginEnd="5sp"
            android:layout_weight="1"
            android:text="@string/text_year"
            android:textSize="18sp" />

        <Spinner
            android:id="@+id/total_year"
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:layout_gravity="center_vertical"
            android:layout_marginStart="5sp"
            android:layout_marginTop="10sp"
            android:layout_marginEnd="5sp"
            android:layout_marginBottom="10sp"
            android:layout_weight="1"
            android:spinnerMode="dialog"
            android:textSize="15sp" />

        <TextView
            android:id="@+id/text_month"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center_vertical"
            android:layout_marginStart="5sp"
            android:layout_marginEnd="5sp"
            android:layout_weight="1"
            android:text="@string/text_month"
            android:textSize="18sp" />

        <Spinner
            android:id="@+id/total_month"
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:layout_gravity="center_vertical"
            android:layout_marginStart="5sp"
            android:layout_marginTop="10sp"
            android:layout_marginEnd="10sp"
            android:layout_marginBottom="10sp"
            android:layout_weight="1"
            android:spinnerMode="dropdown"
            android:textSize="15sp">

        </Spinner>

    </LinearLayout>

    <ListView
        android:id="@+id/cat_list"
        android:layout_width="match_parent"
        android:layout_height="200sp"
        android:layout_below="@+id/cat_Fragment_pie"
        android:layout_marginStart="20dp"
        android:layout_marginEnd="20dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.93" />

</androidx.constraintlayout.widget.ConstraintLayout>